--- a/_posts/2019-09-05-Redis阅读笔记.md
+++ b/_posts/2019-09-05-Redis阅读笔记.md
@@ -73,10 +73,10 @@ tags: Redis 阅读笔记
     - 消息队列：lpush+brpop实现阻塞队列
     - 文章列表：索引范围获取元素
     - **TIPS**：
-        - lpush + lpop = Stack（栈）
-        - lpush + rpop = Queue（队列）
-        - lpush + ltrim = Capped Collection（有限集合）
-        - lpush + brpop = Message Queue（消息队列）
+        - `lpush + lpop = Stack`（栈）
+        - `lpush + rpop = Queue`（队列）
+        - `lpush + ltrim = Capped Collection`（有限集合）
+        - `lpush + brpop = Message Queue`（消息队列）
 - set使用场景：
     - 标签：blog标签
 - sorted set使用场景：
