--- a/_posts/2019-09-05-Redis阅读笔记.md
+++ b/_posts/2019-09-05-Redis阅读笔记.md
@@ -65,7 +65,7 @@ tags: Redis 阅读笔记 数据库
 - string使用场景：
     - 缓存：mysql作为存储层，redis作为缓存层。redis支持高并发数据从redis获取，加速读写。（应用中键名能关联上业务对象，键名尽量小较少内存浪费）
     - 计数、限速：快速计数，网站访问量、秒杀等
-    - 共享session：用户登录信息在多个模块需要使用，redis集中管理，信息从redis中获取
+    - 共享session：用户登录信息在多个模块需要使用，`redis`集中管理，信息从redis中获取
     - 淘汰策略：键过期功能
 - hash使用场景：
     - 缓存用户信息：序列化玩家信息，直观快捷
