--- a/_posts/2019-09-05-Redis阅读笔记.md
+++ b/_posts/2019-09-05-Redis阅读笔记.md
@@ -8,6 +8,8 @@ tags: Redis 阅读笔记
 
 > 高性能的key-value数据库
 
+最`大存储`512MB，可
+
 ### 1.持久化：简单理解为可持续使用（存储磁盘再利用）
 
 - 操作内存中（需考虑物理内存与数据量大小）
@@ -73,7 +75,7 @@ tags: Redis 阅读笔记
     - 消息队列：lpush+brpop实现阻塞队列
     - 文章列表：索引范围获取元素
     - **TIPS**：
-        - `lpush + lpop` = Stack（栈）
+        - `lpush + lpop = Stack`（栈）
         - `lpush + rpop = Queue`（队列）
         - `lpush + ltrim = Capped Collection`（有限集合）
         - `lpush + brpop = Message Queue`（消息队列）
