--- a/_posts/2019-09-05-Redis阅读笔记.md
+++ b/_posts/2019-09-05-Redis阅读笔记.md
@@ -8,12 +8,16 @@ tags: Redis 阅读笔记
 
 > 高性能的key-value数据库
 
+单线程、完全基于内存、数据结构简单、多路I/O复用模型
 ### 1.持久化：简单理解为可持续使用（存储磁盘再利用）
 
 - 操作内存中（需考虑物理内存与数据量大小）
 - 磁盘存储紧凑追加（无需随机访问）
 - 操作原子性（要不都执行要不不执行）
 - 保证效率，redis定期持久化数据
+- 持久化方式：
+    - RDB文件（快照）
+    - AOF文件（追加式文件） 
 
 ### 2.redis数据类型：string、hash、list、set和zset（sorted set：有序集合）
 
