--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -28,6 +28,7 @@ var(
 )
 
 - 局部变量声明未使用编译错误，全局变量声明未使用是允许的
+
 ### 常量
 - iota常量（可被编译器修改的常量），`const出现iota重置为0`。const`语句块中每行+1`
 
@@ -48,5 +49,10 @@ func main() {
     fmt.Println("k=",k)
     fmt.Println("l=",l)
 }
-```
 
+输出结果：
+i=1
+j=6
+k=12
+l=24
+```
