--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -55,4 +55,14 @@ i=1
 j=6
 k=12
 l=24
+
+//k=3<<iota(1+1) l=3<<iota(1+1+1)
 ```
+
+### select语句（随机版switch）
+- select随机一个可运行的case，可运行退出
+- 若无default子句，select会阻塞，循环检测条件直到满足才退出循环
+
+### Go默认的`值传递`，调用过程不会影响到实际参数
+
+### Slice(切片)，即可扩容“动态数组”
