--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -12,8 +12,8 @@ tags: GO 阅读笔记
  
 > 内存管理、数组安全、编译迅速
 
-## Go笔记
-### 变量
+### Go笔记
+#### 变量
 - `:=`省略var，左侧没有`声明新的变量`，产生编译错误（常用于初始化声明）
 
     var intVal int
@@ -29,7 +29,7 @@ var(
 
 - 局部变量声明未使用编译错误，全局变量声明未使用是允许的
 
-### 常量
+#### 常量
 - iota常量（可被编译器修改的常量），`const出现iota重置为0`。const`语句块中每行+1`
 
 ```go
@@ -59,10 +59,10 @@ l=24
 //k=3<<iota(1+1) l=3<<iota(1+1+1)
 ```
 
-### select语句（随机版switch）
+#### select语句（随机版switch）
 - select随机一个可运行的case，可运行退出
 - 若无default子句，select会阻塞，循环检测条件直到满足才退出循环
 
-### Go默认的`值传递`，调用过程不会影响到实际参数
+#### Go默认的`值传递`，调用过程不会影响到实际参数
 
-### Slice(切片)，即可扩容“动态数组”
+#### Slice(切片)，即可扩容“动态数组”
