--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -70,3 +70,13 @@ l=24
 ### Go默认的`值传递`，调用过程不会影响到实际参数
 
 ### Slice(切片)，即可扩容“动态数组”
+````go
+var slice []int = make([]int,10) //定义长度10的切片
+s := slice[startIndex:endIndex] //复制切片从指定的位置，默认值切片起止位置
+````
+
+### Map(集合)
+
+var myMap map[int]string //声明变量，若`无初始化是nil` map不能存放键值对（slice切片也是一样） 
+myMap = make(map[int]string) //创建集合，此时才能修改map
+
