--- a/_posts/2019-09-02-数据库查询优化.md
+++ b/_posts/2019-09-02-数据库查询优化.md
@@ -17,17 +17,38 @@ tags: 数据库 优化 sql 索引
 
 ![b+数据结构](https://github.com/smakry/smakry.github.io/raw/master/imags/2019-09-02-%E6%95%B0%E6%8D%AE%E5%BA%93%E6%9F%A5%E8%AF%A2%E4%BC%98%E5%8C%96/b%2Btreemap.png?raw=true)
 
-1.mysql使用B+树存储（同大部分的文件系统），B+树IO搜索：  
+1. mysql使用B+树存储（同大部分的文件系统）
+    - B+树IO搜索：  
 搜索高度h = log（每个磁盘块的数据项数量m + 1）数据表的数据N  
 即当m越大，h越小  
 m = 磁盘块的大小 / 数据项的大小  
 =====引出数据库表索引字段大小问题
 
+2. 索引分类
+````sql
+CREATE TABLE `vip` (
+	`id` int(4),
+	`name` varchar(10),
+	`idcard` varchar(18),
+	`phone` varchar(11),
+	`address` varchar(50),
+	`notemsg` text,
+	primary key (id),		#唯一索引=》主键索引（加速查找+约束，不为空且唯一）
+	unique(idcard),			#唯一索引（加速查找+约束，唯一）
+	index(phone),			#普通索引（加速查找）
+	fulltext(notemsg)		#全文索引（用于搜索很长文本的时候，效果最好）
+);
 
-2.优化性能方面：
+#联合索引=》联合主键索引：primary key(id,name)
+#联合索引=》联合唯一索引：unique(id,name)
+#联合索引=》联合普通索引：index(id,name)
+#空间索引（较少使用）
+````
 
-- 使索引弱化掉的操作
-- 减少不必要的数据输出
+### 优化性能方面：
+
+1.使索引弱化掉的操作
+2.减少不必要的数据输出
 - 
 
 问题：
