--- a/_posts/2019-09-02-数据库查询优化.md
+++ b/_posts/2019-09-02-数据库查询优化.md
@@ -11,13 +11,26 @@ tags: 数据库 优化 sql 索引
 简单的一个优化即可将效率提升N个档次。优化的精髓所在个人认为在于索引的微妙。“索引”跟查字典、地图上定位本质上都是通过不断的缩小结果集快速查找定位。
 
 ### 数据库索引
+hash类型的索引：查询单条快，范围查询慢  
+b+树类型的索引：b+树，层数越多，数据量指数级增长（innodb默认支持它）
+
+**不同的存储引擎支持的索引类型也不一样** 
+
+InnoDB 支持事务，支持行级别锁定，支持 B-tree、Full-text 等索引，不支持 Hash 索引；  
+MyISAM 不支持事务，支持表级别锁定，支持 B-tree、Full-text 等索引，不支持 Hash 索引；  
+Memory 不支持事务，支持表级别锁定，支持 B-tree、Hash 等索引，不支持 Full-text 索引；  
+NDB 支持事务，支持行级别锁定，支持 Hash 索引，不支持 B-tree、Full-text 等索引；  
+Archive 不支持事务，支持表级别锁定，不支持 B-tree、Hash、Full-text 等索引；  
+
+附：innodb表的索引会存放于s1.ibd文件中，而myisam表的索引则会有单独的索引文件table1.MYI  
+
 #### 索引的数据结构（b+树）
 
 大多的项目对数据的写入操作与读取操作占比大致在1：10，一定程度上把矛头指向了读操作的优化。IO操作的低效性，操作系统有做了对应的优化，在读取时不止读取检索的磁盘同时也读取了相邻的区块（以“页”的方式读取，减少IO操作）。
 
 ![b+数据结构](https://github.com/smakry/smakry.github.io/raw/master/imags/2019-09-02-%E6%95%B0%E6%8D%AE%E5%BA%93%E6%9F%A5%E8%AF%A2%E4%BC%98%E5%8C%96/b%2Btreemap.png?raw=true)
 
-1. mysql使用B+树存储（同大部分的文件系统）
+1. B+树存储（同大部分的文件系统）
     - B+树IO搜索：  
 搜索高度h = log（每个磁盘块的数据项数量m + 1）数据表的数据N  
 即当m越大，h越小  
@@ -37,20 +50,27 @@ CREATE TABLE `vip` (
 	primary key (id),		#唯一索引=》主键索引（加速查找+约束，不为空且唯一）
 	unique(idcard),			#唯一索引（加速查找+约束，唯一）
 	index(phone),			#普通索引（加速查找）
-	fulltext(notemsg)		#全文索引（用于搜索很长文本的时候，效果最好）
+	fulltext(notemsg)		#全文索引（用于搜索很长文本的时候，效果最好，实际开发使用第三方如Sphinx）
 );
 
 #联合索引=》联合主键索引：primary key(id,name)
 #联合索引=》联合唯一索引：unique(id,name)
 #联合索引=》联合普通索引：index(id,name)
 #空间索引（较少使用）
+
+#查看表中索引:
+show index from vip;
 ````
 
 ### 优化性能方面：
 
-1.使索引弱化掉的操作
-2.减少不必要的数据输出
-- 
+1. 使索引弱化掉的操作
 
-问题：
-存储过程？
+2. 减少不必要的数据输出
+3. 
+
+
+
+### 问题：存储过程？
+`数据库sql语言层面的代码封装和重用`，创建的存储过程保存在数据库的数据字典中
+
