--- a/_posts/2019-09-11-网络阅读笔记.md
+++ b/_posts/2019-09-11-网络阅读笔记.md
@@ -9,7 +9,8 @@ tags: 网络 阅读笔记
 > 网络=》协议=》数据交换而建立的规则或标准（网络协议或者说是约定的集合 eg:语言）
 
 
- ISO/OSI | TCP/IP 
- :----- | ----: | :----: 
- 单元格 | 单元格 | 单元格 
- 单元格 | 单元格 | 单元格 
+ ISO/OSI | TCP/IP   
+ :----- | ----: | :----:   
+ 应用层 | 应用层 | 单元格   
+ 表示层 |       | 单元格  
+ 会话层 |       | 单元格   
