--- a/_posts/2019-09-02-数据库查询优化.md
+++ b/_posts/2019-09-02-数据库查询优化.md
@@ -28,7 +28,7 @@ Archive 不支持事务，支持表级别锁定，不支持 B-tree、Hash、Full
 
 大多的项目对数据的写入操作与读取操作占比大致在1：10，一定程度上把矛头指向了读操作的优化。IO操作的低效性，操作系统有做了对应的优化，在读取时不止读取检索的磁盘同时也读取了相邻的区块（以“页”的方式读取，减少IO操作）。
 
-![b+数据结构](https://github.com/smakry/smakry.github.io/raw/master/imags/2019-09-02-%E6%95%B0%E6%8D%AE%E5%BA%93%E6%9F%A5%E8%AF%A2%E4%BC%98%E5%8C%96/b%2Btreemap.png?raw=true)
+![b+数据结构](https://github.com/smakry/smakry.github.io/raw/master/imags/b%2Btreemap.png)
 
 1. B+树存储（同大部分的文件系统）
     - B+树IO搜索：  
