--- a/_posts/2019-09-11-网络阅读笔记.md
+++ b/_posts/2019-09-11-网络阅读笔记.md
@@ -8,9 +8,4 @@ tags: 网络 阅读笔记
 
 > 网络=》协议=》数据交换而建立的规则或标准（网络协议或者说是约定的集合 eg:语言）
 
-
- ISO/OSI | TCP/IP   
- :----- | ----: | :----:   
- 应用层 | 应用层 | 单元格   
- 表示层 |       | 单元格  
- 会话层 |       | 单元格   
+![b+数据结构](https://github.com/smakry/smakry.github.io/raw/master/imags/b%2Btreemap.png)
