--- a/_posts/2019-09-11-网络阅读笔记.md
+++ b/_posts/2019-09-11-网络阅读笔记.md
@@ -8,4 +8,4 @@ tags: 网络 阅读笔记
 
 > 网络=》协议=》数据交换而建立的规则或标准（网络协议或者说是约定的集合 eg:语言）
 
-![b+数据结构](https://github.com/smakry/smakry.github.io/raw/master/imags/b%2Btreemap.png)
+![b+数据结构](https://github.com/smakry/smakry.github.io/raw/master/imags/osi%E4%B8%83%E5%B1%82%E7%BD%91%E7%BB%9C%E6%A8%A1%E5%9E%8B.png)
