--- a/_posts/2019-09-11-网络阅读笔记.md
+++ b/_posts/2019-09-11-网络阅读笔记.md
@@ -15,25 +15,25 @@ tags: 网络 阅读笔记
 
 ![b+数据结构](https://github.com/smakry/smakry.github.io/raw/master/imags/osi%E4%B8%83%E5%B1%82%E7%BD%91%E7%BB%9C%E6%A8%A1%E5%9E%8B.png)
 
-- 物理层：确保原始数据可在各种物理媒介上可靠传输。（重要设备中继器也叫放大器、集线器）    
-- 数据链路层：（作用：数据的成帧、物理地址寻址、流量控制、数据的检错、重发等）基本单位`帧`，主要协议`以太网协议`（重要设备：网桥、交换机）
+1. 物理层：确保原始数据可在各种物理媒介上可靠传输。（重要设备中继器也叫放大器、集线器）    
+2. 数据链路层：（作用：数据的成帧、物理地址寻址、流量控制、数据的检错、重发等）基本单位`帧`，主要协议`以太网协议`（重要设备：网桥、交换机）
     - 数据组合成块（即帧）
     - 如何控制帧在物理信道上的传输；
     - 如何调节发送速率以和接收方相匹配；
     - 如何在两个网络实体之前提供数据链路通路的建立、维持和释放的管理；
     - 如何在不可靠的物理介质上提供可靠的传输。
-- 网络层：`路径选择、路由及逻辑寻址`（负责对子网间的数据包进行路由选择，网络层还可以实现拥塞控制和网际互连等功能）（重要设备：路由器）
+3. 网络层：`路径选择、路由及逻辑寻址`（负责对子网间的数据包进行路由选择，网络层还可以实现拥塞控制和网际互连等功能）（重要设备：路由器）
     - IP协议（Internet Protocol，因特网互联协议）（TCP/IP核心协议，`仅仅提供不可靠、无连接的传送服务`）
     - 与IP协议配套使用实现IP协议的无连接数据报传输、数据报路由选择和差错控制
         - ICMP协议（Internet Control Message Protocol，因特网控制报文协议）
         - ARP协议（Address Resolution Protocol，地址解析协议）
         - RARP协议（Reverse Address Resolution Protocol，逆地址解析协议）
-- 传输层：将上层的`数据分段`并提供端到端的、可靠的或不可靠的传输（重要设备：网关）
+4. 传输层：将上层的`数据分段`并提供端到端的、可靠的或不可靠的传输（重要设备：网关）
     - TCP协议（Transmission Control Protocol，传输控制协议）
     - UDP协议（User Datagram Protocol，用户数据报协议）
-- 会话层：`建立、管理、终止进程之间的会话`。会话层还可利用在数据中插入校验点实现数据同步
-- 表示层：`“翻译官”`，保证应用层信息可以相互理解。（表示层的数据转换包括数据的加密、压缩、格式转换等）
-- 应用层：“怎么使用网络”（为操作系统或网络应用程序提供访问网络服务的接口）  
+5. 会话层：`建立、管理、终止进程之间的会话`。会话层还可利用在数据中插入校验点实现数据同步
+6. 表示层：`“翻译官”`，保证应用层信息可以相互理解。（表示层的数据转换包括数据的加密、压缩、格式转换等）
+7. 应用层：“怎么使用网络”（为操作系统或网络应用程序提供访问网络服务的接口）  
 ====会话层、表示层、应用层：`数据传输的基本单位为报文`
 ====包含的主要协议：FTP（文件传送协议）、Telnet（远程登录协议）、DNS（域名解析协议）、SMTP（邮件传送协议），POP3协议（邮局协议），HTTP协议（Hyper Text Transfer Protocol）
 
