--- a/_posts/2019-09-11-网络阅读笔记.md
+++ b/_posts/2019-09-11-网络阅读笔记.md
@@ -15,7 +15,11 @@ tags: 网络 阅读笔记
 
 ![b+数据结构](https://github.com/smakry/smakry.github.io/raw/master/imags/osi%E4%B8%83%E5%B1%82%E7%BD%91%E7%BB%9C%E6%A8%A1%E5%9E%8B.png)
 
-1. 物理层：确保原始数据可在各种物理媒介上可靠传输。（重要设备中继器也叫放大器、集线器）    
+1. 物理层：确保原始数据可在各种物理媒介上可靠传输。（重要设备中继器也叫放大器、集线器） 
+- 通信方式：
+    - 单工通信：单向传输
+    - 半双工通信：双向交替传输
+    - 全双工通信：双向同时传输   
 2. 数据链路层：（作用：数据的成帧、物理地址寻址、流量控制、数据的检错、重发等）基本单位`帧`，主要协议`以太网协议`（重要设备：网桥、交换机）
     - 数据组合成块（即帧）
     - 如何控制帧在物理信道上的传输；
@@ -29,11 +33,45 @@ tags: 网络 阅读笔记
         - ARP协议（Address Resolution Protocol，地址解析协议）
         - RARP协议（Reverse Address Resolution Protocol，逆地址解析协议）
 4. 传输层：将上层的`数据分段`并提供端到端的、可靠的或不可靠的传输（重要设备：网关）
-    - TCP协议（Transmission Control Protocol，传输控制协议）
-    - UDP协议（User Datagram Protocol，用户数据报协议）
+    - TCP协议（Transmission Control Protocol，传输控制协议）(`完整性`)
+    - UDP协议（User Datagram Protocol，用户数据报协议）（`及时性`）
 5. 会话层：`建立、管理、终止进程之间的会话`。会话层还可利用在数据中插入校验点实现数据同步
 6. 表示层：`“翻译官”`，保证应用层信息可以相互理解。（表示层的数据转换包括数据的加密、压缩、格式转换等）
 7. 应用层：“怎么使用网络”（为操作系统或网络应用程序提供访问网络服务的接口）  
 ====会话层、表示层、应用层：`数据传输的基本单位为报文`
 ====包含的主要协议：FTP（文件传送协议）、Telnet（远程登录协议）、DNS（域名解析协议）、SMTP（邮件传送协议），POP3协议（邮局协议），HTTP协议（Hyper Text Transfer Protocol）
+
+### IP地址编址
+
+IP地址={<网络号>,<主机号>}  
+![b+数据结构](https://github.com/smakry/smakry.github.io/raw/master/imags/osi%E4%B8%83%E5%B1%82%E7%BD%91%E7%BB%9C%E6%A8%A1%E5%9E%8B.png)
+
+1.子网划分  
+
+`主机号拿出一部分作为子网号`，两级IP地址划分为三级IP地址。  
+IP地址={<网络号>,<子网号>,<主机号>}  
+`要使用子网，必须配置子网掩码`。一个 B 类地址的默认子网掩码为 255.255.0.0，如果 B 类地址的子网占两个比特，那么子网掩码为 11111111 11111111 11000000 00000000，也就是 255.255.192.0。（外部网络是看不到子网的存在）
+
+### TCP的三次握手
+
+![b+数据结构](https://github.com/smakry/smakry.github.io/raw/master/imags/osi%E4%B8%83%E5%B1%82%E7%BD%91%E7%BB%9C%E6%A8%A1%E5%9E%8B.png)  
+
+假设A为客户端B为服务器端。  
+首先B处于LISTEN（监听）状态，等待客户的连接请求。  
+**第1次握手**：A向B发送连接请求报文，SYN=1，ACK=0，选择一个初始的序号 x。  
+**第2次握手**：B收到连接请求报文，如果同意建立连接，则向A发送连接确认报文，SYN=1，ACK=1，确认号为 x+1，`同时也选择一个初始的序号y`。  
+**第3次握手**：A收到B的连接确认报文后，还要向B发出确认，确认号为y+1，序号为x+1。(第三次的握手`防止失效的连接请求`（客户端请求网络滞留延迟，导致重新请求，服务端接收到多个）)  
+B收到A的确认后，连接建立。
+
+### TCP的四次挥手
+
+![b+数据结构](https://github.com/smakry/smakry.github.io/raw/master/imags/osi%E4%B8%83%E5%B1%82%E7%BD%91%E7%BB%9C%E6%A8%A1%E5%9E%8B.png) 
+
+以下描述不讨论序号和确认号，因为序号和确认号的规则比较简单。并且不讨论 ACK因为ACK在连接建立之后都为1。  
+**第1次挥手**：A发送连接释放报文，FIN=1。  
+**第2次挥手**：B收到之后发出确认，此时TCP属于半关闭状态，`B能向A发送数据但是A不能向B发送数据`。（单向关闭A，`服务器B可能还有未发完的数据需继续发`）  
+**第3次挥手**：当B不再需要连接时，发送连接释放报文，FIN=1。  
+**第4次挥手**：A收到后发出确认，进入TIME-WAIT状态，等待2MSL（最大报文存活时间后释放连接。  
+B收到A的确认后释放连接。  
+
 
