--- a/_posts/2019-09-11-网络阅读笔记.md
+++ b/_posts/2019-09-11-网络阅读笔记.md
@@ -44,7 +44,7 @@ tags: 网络 阅读笔记
 ### IP地址编址
 
 IP地址={<网络号>,<主机号>}  
-![b+数据结构](https://github.com/smakry/smakry.github.io/raw/master/imags/osi%E4%B8%83%E5%B1%82%E7%BD%91%E7%BB%9C%E6%A8%A1%E5%9E%8B.png)
+![IP地址编址](https://github.com/smakry/smakry.github.io/raw/master/imags/IP%E5%9C%B0%E5%9D%80%E7%BD%91%E7%BB%9C%E5%8F%B7%E5%92%8C%E4%B8%BB%E6%9C%BA%E5%AD%97%E6%AE%B5.png)
 
 1.子网划分  
 
@@ -54,7 +54,7 @@ IP地址={<网络号>,<子网号>,<主机号>}
 
 ### TCP的三次握手
 
-![b+数据结构](https://github.com/smakry/smakry.github.io/raw/master/imags/osi%E4%B8%83%E5%B1%82%E7%BD%91%E7%BB%9C%E6%A8%A1%E5%9E%8B.png)  
+![TCP三次握手](https://github.com/smakry/smakry.github.io/raw/master/imags/tcp.png)  
 
 假设A为客户端B为服务器端。  
 首先B处于LISTEN（监听）状态，等待客户的连接请求。  
@@ -65,7 +65,7 @@ B收到A的确认后，连接建立。
 
 ### TCP的四次挥手
 
-![b+数据结构](https://github.com/smakry/smakry.github.io/raw/master/imags/osi%E4%B8%83%E5%B1%82%E7%BD%91%E7%BB%9C%E6%A8%A1%E5%9E%8B.png) 
+![TCP四次挥手](https://github.com/smakry/smakry.github.io/raw/master/imags/TCP%E6%8C%A5%E6%89%8B.png) 
 
 以下描述不讨论序号和确认号，因为序号和确认号的规则比较简单。并且不讨论 ACK因为ACK在连接建立之后都为1。  
 **第1次挥手**：A发送连接释放报文，FIN=1。  
