--- a/_posts/2019-09-11-网络阅读笔记.md
+++ b/_posts/2019-09-11-网络阅读笔记.md
@@ -75,4 +75,103 @@ B收到A的确认后，连接建立。
 **第4次挥手**：A收到后发出确认，进入TIME-WAIT状态，等待2MSL（最大报文存活时间后释放连接。  
 B收到A的确认后释放连接。  
 
+### TIMEWAIT和CLOSEWAIT？
+
+<https://www.jianshu.com/p/f6a563f3526c?utm_source=oschina-app>  
+
+### TCP保证可靠传输
+
+<https://blog.csdn.net/liuchenxia8/article/details/80428157>  
+<https://www.jianshu.com/p/42dbcd39c3e7>
+
+TCP协议传输的特点主要是面向字节流、传输可靠、面向连接。TCP保证可靠传输的方式：
+- 校验和  
+- 序列号  
+- 确认应答  
+- 超时重传  
+- 连接管理  
+- 流量控制  
+- 拥塞控制  
+
+1.校验和  
+
+TCP检验和的计算与UDP一样，在计算时要加上12byte的伪首部，`检验范围包括TCP首部及数据部分`，但是UDP的检验和字段为可选的，而`TCP中是必须有`的。  
+- 计算方法为：  
+
+![校验和](https://github.com/smakry/smakry.github.io/raw/master/imags/TCP%E6%8C%A5%E6%89%8B.png) 
+
+在发送方将整个报文段分为多个16位的段（都当做一个16位的整数），将这些整数加起来。并且前面的进位不能丢弃，补在后面，最后取反，得到校验和。  
+- 发送方：  
+在发送数据之前计算检验和，并进行校验和的填充。  
+- 接收方：  
+收到数据后，对数据以同样的方式进行计算，求出校验和，`与发送方的进行比对`，如最终结果为检验字段所有位是全1则正确（UDP中为0是正确）(`但此时数据不一定传输成功`)，否则存在错误。
+
+2.序列号  
+
+TCP传输时将每个字节的数据都进行了`编号`(数据可以保证不重复不漏)，这就是序列号。
+    - 保证可靠性（当接收到的数据总少了某个序号的数据时，能马上知道）  
+    - 保证数据的按序到达  
+    - 提高效率，可实现多次发送，一次确认  
+    - 去除重复数据（按序）  
+
+3.确认应答  
+
+TCP传输的过程中，每次接收方收到数据后，都会对传输方进行确认应答。也就是发送ACK报文。这个ACK报文当中带有对应的确认序列号，告诉发送方，接收到了哪些数据，下一次的数据从哪里发。  
+
+![确认应答](https://github.com/smakry/smakry.github.io/raw/master/imags/TCP%E6%8C%A5%E6%89%8B.png)  
+
+4.超时重传  
+
+数据在传输过程产生丢失情况导致应答出错，不能够判断是否传输成功。  
+    - 数据在传输过程中网络原因全部丢失，接收方没有收到任何数据。  
+    - 接收方接收到了部分数据，确认应答报文（ACK报文）网络原因丢失。  
+
+超时重传（发送完数据等待一定时间接收确认报文，若未收到再次发送），权衡等待的时间是动态计算。  
+    - 在Linux中（BSD Unix和Windows下也是这样）超时以500ms为一个单位进行控制，每次判定超时重发的超时时间都是500ms的整数倍。重发一次后，仍未响应，那么等待2*500ms的时间后，再次重传。等待4*500ms的时间继续重传。以一个指数的形式增长。累计到一定的重传次数，TCP就认为网络或者对端出现异常，强制关闭连接。  
+
+5.连接管理  
+
+即TCP的三次握手和四次挥手。  
+
+6.流量控制  
+
+流量控制（`根据接收端的处理能力，来决定发送端的发送速度`）。  
+
+![流量控制](https://github.com/smakry/smakry.github.io/raw/master/imags/TCP%E6%8C%A5%E6%89%8B.png)  
+
+接收端处理数据的`速度是有限`的，如果发送方发送数据的速度过快，导致`接收端的缓冲区满，而发送方继续发送，就会造成丢包`，继而引起丢包重传等一系列连锁反应。  
+在TCP报文段首部中有一个16位窗口长度，当接收端接收到发送方的数据后，在应答报文ACK中就将自身缓冲区的剩余大小，放入16窗口大小中。这个大小随数据传输情况而变，窗口越大，网络吞吐量越高，而一旦接收方发现自身的缓冲区快满了，就将窗口设置为更小的值通知发送方。如果缓冲区满，就将窗口置为0，发送方收到后就不再发送数据，但是需要`定期发送一个窗口探测数据段`，使接收端把窗口大小告诉发送端。  
+
+7.拥塞控制  
+
+网络拥堵，发送的数据段超过了最大生存时间没有达到接收方，丢包超时重传，反复加重网络负载。
+
+- 慢启动  
+TCP引入慢启动机制，先发出少量数据，就像`探路`一样，先摸清当前的网络拥堵状态后，再决定按照多大的速度传送数据。  
+    - 连接建好的开始先初始化cwnd = 1，表明可以传一个MSS大小的数据。  
+    - 每当收到一个ACK，cwnd++; 呈线性上升  
+    - 每当过了一个RTT，cwnd = cwnd*2; 呈指数让升  
+    - 还有一个ssthresh（slow start threshold），是一个上限，当cwnd >= ssthresh时，就会进入“拥塞避免算法”  
+
+![慢启动](https://github.com/smakry/smakry.github.io/raw/master/imags/TCP%E6%8C%A5%E6%89%8B.png)  
+
+RTT(Round Trip Time)：一个连接的往返时间，即数据发送时刻到接收到确认的时刻的差值；   
+RTO(Retransmission Time Out)：重传超时时间，即从数据发送时刻算起，超过这个时间便执行重传。 
+
+- 拥塞避免  
+    - 收到一个ACK时，cwnd = cwnd + 1/cwnd  
+    - 当每过一个RTT时，cwnd = cwnd + 1  
+这样就可以避免增长过快导致网络拥塞，慢慢的增加调整到网络的最佳值。很明显，是一个线性上升的算法
+- 快重传  
+当出现ack超时的时候，需要重传数据包。  
+    - sshthresh = cwnd / 2
+    - cwnd重置为1   
+    - 进入慢启动过程  
+TCP认为这种情况太糟糕，反应也很强烈。快速重传在收到3个duplicate ACK时就开启重传(三次ack就认为丢包)，而不用等到RTO超时。  
+TCP Reno的实现是：  
+        - cwnd = cwnd /2  
+        - sshthresh = cwnd  
+        - 进入快速恢复算法——Fast Recovery  
+
+- 快恢复  
 
