--- a/_posts/2019-09-11-网络阅读笔记.md
+++ b/_posts/2019-09-11-网络阅读笔记.md
@@ -177,3 +177,11 @@ TCP Reno的实现是：
 
 - 快恢复  
 
+### Cookie原理
+
+![Cookie原理](https://github.com/smakry/smakry.github.io/raw/master/imags/Cookie%E5%8E%9F%E7%90%86.png)
+
+1.当用户浏览使用Cookie的网站的时候，如果是第一次浏览则网站的服务器会为用户生成一个唯一的ID，`并用这个ID作为索引`在后台服务器数据库中生成一条记录用来标识此用户。  
+2.然后服务器把当前的用户ID添加到http的响应报文发送给浏览器，当浏览器收到这个响应报文之后，就会在它的`Cookie文件中添加一行`，包括服务器的主机名还有这个用户的ID。  
+3.之后当用户通过浏览器继续访问这个网站的时候，浏览器都会从Cookie文件中`取出用户的ID放在http请求中发送给服务器`，服务器利用用户的ID查找数据库就可以得到用户之前的访问记录。 
+ 
