--- a/_posts/2019-09-17-操作系统阅读笔记.md
+++ b/_posts/2019-09-17-操作系统阅读笔记.md
@@ -10,18 +10,15 @@ tags: 操作系统 阅读笔记
 
 ### 并发与并行？
 
-1. 并行：在同一时刻，有多条指令在`多个处理器上`**同时**执行，从微观还是从宏观看，都是一起执行。
-
-![并行](https://github.com/smakry/smakry.github.io/raw/master/imags/Cookie%E5%8E%9F%E7%90%86.png)
-
+1. 并行：在同一时刻，有多条指令在`多个处理器上`**同时**执行，从微观还是从宏观看，都是一起执行。  
+![并行](https://github.com/smakry/smakry.github.io/raw/master/imags/%E5%B9%B6%E8%A1%8C.png)  
 2. 并发：在同一时刻`只能有一条指令`执行，但多个进程指令被快速的`轮换执行`，宏观上具有多个进程同时执行的效果，但微观上并不是同时执行，只是把时间分成若干段，使多个进程快速交替的执行。  
-
-![并发](https://github.com/smakry/smakry.github.io/raw/master/imags/Cookie%E5%8E%9F%E7%90%86.png)  
+![并发](https://github.com/smakry/smakry.github.io/raw/master/imags/%E5%B9%B6%E5%8F%91.png)  
 
 ### 操作系统的四大特性
 
 操作系统的四大特征：并发、共享、虚拟、异步  
-1. 并发：在一段时间内，运行多个程序，执行多个任务，从宏观上来说，操作系统引入进程的目的就是为了使程序能并发执行。  
+1. 并发：在一段时间内，运行多个程序，执行多个任务，从宏观上来说，操作系统引入进程的目的就是为了使程序能并发执行。    
 2. 共享：资源共享，系统中的资源可供多个`并发执行的进程`共同使用。由于资源的属性不同，多个进程对资源的共享方式也不同，可分为互斥共享方式和同时访问方式。  
 - 互斥共享方式：一段时间内`只允许一个进程`访问该资源。  
 - 同时共享方式：某些资源，一段时间内允许多个进程“同时”对它们进行访问，这个`“同时”是宏观上`的，在`微观上可能是分时共享`（eg：磁盘设备）。  
@@ -35,13 +32,11 @@ tags: 操作系统 阅读笔记
 
 1. 多进程的组织形式：
     - PCB（Process Control Block，进程控制块）：`用来记录进程信息的数据结构`（管理进程的核心，包含了PID等进程的所有关键信息）
-2. 进程的状态：就绪状态、执行状态、阻塞状态（多线程时也是这些状态）
-
-![进程状态](https://github.com/smakry/smakry.github.io/raw/master/imags/Cookie%E5%8E%9F%E7%90%86.png)  
-
-- 就绪->执行：处于就绪状态的进程，在调度程序为之分配了处理机之后便开始执行。  
-- 执行->就绪：正在执行的进程如果因为分配他的`时间片已经用完`，而被`剥夺处理机`。  
-- 执行->阻塞：如果因为某些原因致使当前的进程执行受阻，使之不能执行。
+2. 进程的状态：就绪状态、执行状态、阻塞状态（多线程时也是这些状态）  
+![进程状态](https://github.com/smakry/smakry.github.io/raw/master/imags/%E8%BF%9B%E7%A8%8B%E7%8A%B6%E6%80%81.png)  
+    - 就绪->执行：处于就绪状态的进程，在调度程序为之分配了处理机之后便开始执行。  
+    - 执行->就绪：正在执行的进程如果因为分配他的`时间片已经用完`，而被`剥夺处理机`。  
+    - 执行->阻塞：如果因为某些原因致使当前的进程执行受阻，使之不能执行。  
 
 3. 队列：就绪队列、等待（阻塞）队列
 
