--- a/_posts/2019-09-17-操作系统阅读笔记.md
+++ b/_posts/2019-09-17-操作系统阅读笔记.md
@@ -8,6 +8,8 @@ tags: 操作系统 阅读笔记
 
 > **管理**计算机硬件与软件资源的计算机程序，计算机系统的内核与基石
 
+https://www.cnblogs.com/xdyixia/p/9274909.html
+
 ### 并发与并行？
 
 1. 并行：在同一时刻，有多条指令在`多个处理器上`**同时**执行，从微观还是从宏观看，都是一起执行。  
@@ -65,4 +67,55 @@ tags: 操作系统 阅读笔记
 - `只有内核级线程才能发挥多核性能`，因为内核级线程`共用一套MMU`（即内存映射表），统一分配核1核2（即有多个CPU，可以一个CPU执行一个内核级线程）。`进程无法发挥多核性能`，因为进程切换都得切MMU。
 - 为什么需要内核级线程？如果只有用户级线程，在内核中只能看到进程，所以当用户级线程中一个线程进行IO读写阻塞时，内核会将该线程所在的进程直接切换。例如当用浏览器打开网页，这个进程中有下载数据线程，有显示数据线程，当数据下载读写阻塞时，内核直接切到qq（这些切换是指在CPU上运行的程序的切换）。  
 
- 
+#### 进程与线程的对比？
+
+进程 是`系统进行资源调度和分配`的基本单位；  
+线程 是`CPU调度`的基本单位。  
+
+进程 = 资源（包括寄存器值，PCB，内存映射表MMU）+ TCB（栈结构）  
+线程 = TCB（栈结构）  
+  
+线程 的`资源是共享`的  
+进程 间的`资源是分隔独立`的，内存映射表不同，占用物理内存地址是分隔的  
+  
+线程 的切换只是切换PC，切换了TCB（栈结构）  
+进程 的切换不仅要切换PC，还包括切换资源，即切换内存映射表  
+
+#### 进程间通信和线程同步
+
+IPC（Inter-Process Communication，进程间通信）主要是指多个`进程间的数据交互`。  
+线程间同步（Thread Synchronization）主要是指维护多个`线程`之间`数据准确、一致性`。  
+
+<https://mp.weixin.qq.com/s/VV_mTpuOYFIZRb94mwhr2Q>  
+
+##### 进程间通信  
+
+进程间七大通信方式：  
+pipe、file、msg、shm、sem、signal、socket  
+
+1. Pipe（管道）：管道是一种半双工的通信方式，数据只能单向流动，通过管道从一个进程流向另一个进程是具有时间先后顺序的。管道文件是一种临时文件，不是磁盘上的真真正正的文件，`是一块内存区域`。  
+`无名管道`只能在具有亲缘关系的进程间使用（通常指父子进程关系）。
+`有名管道`（named pipe）非父子进程间通信。  
+2. file（文件）：每打开一个文件，就会产生一个文件控制块，而文件控制块与文件描述符是一一对应的，通过对文件描述符的操作进而对文件进行操作（可以是不相关进程间的通信）。
+3. msg（Message Queue，消息队列）：消息队列是由消息的链表，`存放在内核中`并由`消息队列标识符标识`。消息队列克服了传递信息少、管道只能承载无格式字节流以及缓冲区大小受限制等缺点。
+4. shm（Shared Memory，共享内存）：共享内存就是`映射一段能被其他进程所访问的内存`，这段共享内存由一个进程创建，但多个进程都可以访问。`共享内存是最快的IPC方式`，它是针对其他进程间通信方式运行效率低而专门设计的。它往往与其他通信机制，如信号量，配合使用，来实现进程间的同步和通信。
+5. sem（Semaphore，信号量）：`信号量是一个计数器`，可以用来控制多个进程对共享资源的访问。它`常作为一种锁机制`，防止某进程正在访问共享资源时，其他进程也访问该资源。因此，主要作为进程间以及同一进程内不同线程之间的同步手段。
+6. signal/sinal（信号）:用于通知接收进程某个事件已经发生。  
+- 信号通信的目的:`某某事件发生，此时需要处理什么`。
+- 进程间（可以是不相关的进程）传递信号场景：`信号又被称之为中断`，需要处理什么（对应的是中断处理函数），此时设置断点，形参入栈，`保存现场信息`，然后去执行中断处理函数，当处理完成之后，恢复现场信息，程序继续往下执行。  
+7. socket（套接字）:`网络之间`不同进程间（可以不同机器）通信，属于网络编程部分。  
+
+##### 线程间同步  
+
+`线程间通信的主要目的是用于线程同步`，所以没有像进程通信中的用于数据交换的通信机制。线程间同步主要有以下方式：  
+mutex（互斥量）、rwlock（读写锁）、cond（条件变量）、semaphore（信号量）、spinlock（自旋锁）  
+
+<https://blog.csdn.net/majianfei1023/article/details/51550322>
+
+1. mutex（互斥量）：互斥量`本质上说是一把锁`，在访问共享资源前对互斥量进行加锁，在访问完成后释放互斥量。对互斥量进行加锁以后，其他视图再次对互斥量加锁的线程都会被阻塞直到当前线程释放该互斥锁。如果释放互斥量时有一个以上的线程阻塞，那么所有该锁上的阻塞线程都会变成可运行状态，第一个变成运行状态的线程可以对互斥量加锁，其他线程就会看到互斥量依然是锁着，只能再次阻塞等待它重新变成可用，这样，`一次只有一个线程可以向前执行`。  
+2. rwlock（读写锁）：读写锁与互斥量类似，不过`读写锁拥有更高的并行性`。互斥量要么是锁住状态，要么是不加锁状态，而且一次只有一个线程可以对其加锁。读写锁有3种状态：读模式下加锁状态，写模式下加锁状态，不加锁状态。一次只有一个线程可以占有写模式的读写锁，但是`多个线程可以同时占有**读模式**`的读写锁。  
+当读写锁是写加锁状态时，在这个锁被解锁之前，所有视图对这个锁加锁的线程都会被阻塞。当读写锁在读加锁状态时，所有试图以读模式对它进行加锁的线程都可以得到访问权，但是任何希望以写模式对此锁进行加锁的线程都会阻塞，直到所有的线程释放它们的读锁为止。  
+3. cond（条件变量）：条件变量是线程可用的另一种同步机制。`互斥量用于上锁，条件变量则用于等待`，并且条件变量总是需要与互斥量一起使用，运行线程以无竞争的方式等待特定的条件发生。  
+条件变量本身是由互斥量保护的，线程在改变条件变量之前必须首先锁住互斥量。其他线程在获得互斥量之前不会察觉到这种变化，因为互斥量必须在锁定之后才能计算条件。  
+4. semaphore（信号量）：它允许多个线程在同一时刻访问同一资源，但是需要限制在`同一时刻访问此资源的最大线程数目`。信号量对象对线程的同步方式与前面几种方法不同，信号量允许多个线程同时使用共享资源，这与操作系统中的PV操作相同。它指出了同时访问共享资源的线程最大数目。
+5. spinlock（自旋锁）:自旋锁与互斥量类似，但它不是通过休眠使进程阻塞，而是`在获取锁之前一直处于忙等（自旋）阻塞状态`。自旋锁可以用于以下情况：锁被持有的时间短，而且线程并不希望在重新调度上花费太多的成本。  
