--- a/_posts/2019-09-17-操作系统阅读笔记.md
+++ b/_posts/2019-09-17-操作系统阅读笔记.md
@@ -42,7 +42,7 @@ https://www.cnblogs.com/xdyixia/p/9274909.html
 
 3. 队列：就绪队列、等待（阻塞）队列
 
-##### CPU调度算法（在就绪队列中怎么挑选进程让CPU执行）  
+##### CPU调度算法（在就绪队列中怎么**挑选进程**让CPU执行）  
 
 - 周转时间：从开始申请执行任务，到执行`任务完成`。  
 - 响应时间：从开始申请执行任务，到`开始执行`任务。 
@@ -100,7 +100,7 @@ pipe、file、msg、shm、sem、signal、socket
 3. msg（Message Queue，消息队列）：消息队列是由消息的链表，`存放在内核中`并由`消息队列标识符标识`。消息队列克服了传递信息少、管道只能承载无格式字节流以及缓冲区大小受限制等缺点。
 4. shm（Shared Memory，共享内存）：共享内存就是`映射一段能被其他进程所访问的内存`，这段共享内存由一个进程创建，但多个进程都可以访问。`共享内存是最快的IPC方式`，它是针对其他进程间通信方式运行效率低而专门设计的。它往往与其他通信机制，如信号量，配合使用，来实现进程间的同步和通信。
 5. sem（Semaphore，信号量）：`信号量是一个计数器`，可以用来控制多个进程对共享资源的访问。它`常作为一种锁机制`，防止某进程正在访问共享资源时，其他进程也访问该资源。因此，主要作为进程间以及同一进程内不同线程之间的同步手段。
-6. signal/sinal（信号）:用于通知接收进程某个事件已经发生。  
+6. signal/sinal（信号）:用于通知接收进程某个事件已经发生需要处理。  
 - 信号通信的目的:`某某事件发生，此时需要处理什么`。
 - 进程间（可以是不相关的进程）传递信号场景：`信号又被称之为中断`，需要处理什么（对应的是中断处理函数），此时设置断点，形参入栈，`保存现场信息`，然后去执行中断处理函数，当处理完成之后，恢复现场信息，程序继续往下执行。  
 7. socket（套接字）:`网络之间`不同进程间（可以不同机器）通信，属于网络编程部分。  
@@ -119,3 +119,20 @@ mutex（互斥量）、rwlock（读写锁）、cond（条件变量）、semaphor
 条件变量本身是由互斥量保护的，线程在改变条件变量之前必须首先锁住互斥量。其他线程在获得互斥量之前不会察觉到这种变化，因为互斥量必须在锁定之后才能计算条件。  
 4. semaphore（信号量）：它允许多个线程在同一时刻访问同一资源，但是需要限制在`同一时刻访问此资源的最大线程数目`。信号量对象对线程的同步方式与前面几种方法不同，信号量允许多个线程同时使用共享资源，这与操作系统中的PV操作相同。它指出了同时访问共享资源的线程最大数目。
 5. spinlock（自旋锁）:自旋锁与互斥量类似，但它不是通过休眠使进程阻塞，而是`在获取锁之前一直处于忙等（自旋）阻塞状态`。自旋锁可以用于以下情况：锁被持有的时间短，而且线程并不希望在重新调度上花费太多的成本。  
+
+##### 死锁
+
+在两个或多个`并发进程`中，如果每个进程持有某种资源而又都等待别的进程释放它或它们现在保持着的资源，在未改变这种状态之前都不能向前推进，称这一组进程产生了死锁。通俗地讲，就是两个或多个进程被无限期地阻塞、`相互等待`的一种状态。
+
+1. 死锁产生条件：  
+    - 互斥条件：一个资源一次`只能被一个进程使用`。
+    - 请求保持条件：一个进程因请求资源而阻塞时，对`已经获得的资源保持不放`。  
+    - 不可抢占条件：进程已获得的资源在未使用完之前`不能强行剥夺`。  
+    - 循环等待条件：如果进程之间形成一种头尾相接的`循环等待`资源的关系。  
+2. 死锁处理：
+    - 预防死锁：`破坏产生死锁的4个必要条件`中的一个或者多个，实现起来较简单，但如果限制过于严格会降低系统资源的利用率以及吞吐量。
+    - 避免死锁：在资源的动态分配中，`防止系统进入不安全状态`（可能产生死锁的状态）
+    - 检测死锁：允许系统运行过程中产生死锁，在死锁发生后，采用一定的算法进行检测，并确定与死锁相关的资源和进程，并清除检测到的死锁（检测并清除的方法实现难度高）。
+    - 解除死锁：与死锁检测配合，将系统从死锁中解脱出来（撤销进程或者剥夺资源）。对检测到的和死锁相关的进程以及资源，通过撤销或者挂起的方式，释放一些资源并将其分配给处于阻塞状态的进程，使其转变为就绪态。  
+
+### 内存管理
