--- a/_posts/2019-09-17-操作系统阅读笔记.md
+++ b/_posts/2019-09-17-操作系统阅读笔记.md
@@ -120,8 +120,6 @@ mutex（互斥量）、rwlock（读写锁）、cond（条件变量）、semaphor
 4. semaphore（信号量）：它允许多个线程在同一时刻访问同一资源，但是需要限制在`同一时刻访问此资源的最大线程数目`。信号量对象对线程的同步方式与前面几种方法不同，信号量允许多个线程同时使用共享资源，这与操作系统中的PV操作相同。它指出了同时访问共享资源的线程最大数目。
 5. spinlock（自旋锁）:自旋锁与互斥量类似，但它不是通过休眠使进程阻塞，而是`在获取锁之前一直处于忙等（自旋）阻塞状态`。自旋锁可以用于以下情况：锁被持有的时间短，而且线程并不希望在重新调度上花费太多的成本。  
 
-
-
 ##### 死锁
 
 在两个或多个`并发进程`中，如果每个进程持有某种资源而又都等待别的进程释放它或它们现在保持着的资源，在未改变这种状态之前都不能向前推进，称这一组进程产生了死锁。通俗地讲，就是两个或多个进程被无限期地阻塞、`相互等待`的一种状态。
@@ -139,3 +137,72 @@ mutex（互斥量）、rwlock（读写锁）、cond（条件变量）、semaphor
 
 ### 内存管理
 
+<https://www.jianshu.com/p/ca94dcc014c7>
+
+![内存管理模式演变]()
+
+#### 物理内存（取决于CPU寻址空间和实际内存条大小）  
+
+- 寻址空间0-2^32（32位机器），那么对应的是4GB（4 * 1024 * 1024 * 1024 = 2^32）  
+- 物理内存`分配内存是随机的`,程序运行时候地址不确定（程序要访问0x00000000，但分配随机所以0x00000000不一定是程序所要访问的地址）
+- 直接使用物理内存（进程空间不隔离，没有权限保护，进程间相互影响）
+- 直接使用物理内存（程序需要连续的内存地址下），碎片产生多（小内存块释放不能再次被需大内存程序使用），内存利用率低
+
+#### 虚拟地址空间  
+
+解决直接操作物理内存带来的问题，引入虚拟空间（可以无限大），`每个进程有自己的虚拟空间`（地址可以从“0”开始，解决地址不确定）。  
+
+#### 基本内存管理（分段）  
+
+在虚拟地址空间和物理地址空间做一一映射（程序操作的是虚拟地址空间），映射的是一片`连续的`物理内存。物理内存做分段处理，用于映射。  
+- 虚拟地址空间解决地址不确定问题
+- 物理内存分段解决了内存重叠问题，空间上隔离
+- 分段同样是一片连续的物理内存，内存利用率低的问题没有解决
+
+1.固定分区  
+![固定分区1]()  
+
+![固定分区2]()
+
+2.非固定分区  
+除系统占用的内存空间外，`其余作为一个整体`，每个程序进来计算所需内存空间分配（但存在运行时候所需内存空间的增加导致无法运行或者发生分区交换，预留太多浪费利用率低）  
+
+![非固定分区]()
+
+3.交换分区  
+当运行时分区不足以供程序使用，讲当前程序`倒到外置存储`，然后重新分配更大空间内存，再`重新`加载程序
+
+4.双基址（2个相同的程序，共享指令（可理解程序代码段），但分配不同的数据段）  
+
+#### 内存分页  
+
+解决分段带来的内存利用率低的问题，引入分页技术。将`虚拟内存空间和物理内存空间`**皆划分**为大小相同的页面，如4KB、8KB或16KB等，并以页面作为内存空间的最小分配单位，一个程序的一个页面可以存放在任意一个物理页面里。  
+通过`页表`（一个硬件数据结构）查找管理页面。
+
+分页解析详见：<https://blog.csdn.net/iostream1001001/article/details/77124459>  
+
+- （优点）分页的大小比较小，不会产生外部碎片
+- （优点）一个进程占用的内存空间`可以不是连续`的，并且一个进程的虚拟页面在不需要的时候`可以放在磁盘中`  
+- （缺点）页表大小很大  
+32位寻址4k大小的页的页表大小为2^20(页数)*4Byte（表项长度=20位页号+12位控制位）=4MB  
+- （缺点）分页系统存在的一个无法容忍，同时也是分页系统无法解决的一个缺点就是：`一个进程只能占有一个虚拟地址空间`。在此种限制下，一个程序的大小至多只能和虚拟空间一样大，其所有内容都必须从这个共同的虚拟空间内分配。
+
+##### 页面置换算法  
+
+**缺页中断**：在分页系统中，一个虚拟页面既有可能在物理内存，`也有可能保存在磁盘中`。CPU调用的虚拟页面地址对应的物理内存不存在（在磁盘中），此时将产生缺页中断（`中断处理`：将虚拟页面对应的内存地址找到并加载到内存）。  
+如果发生缺页中断，就需要从磁盘上将需要的页面调入内存。如果`内存没有多余的空间`，就需要在现有的页面中选择一个页面进行替换。使用不同的置换算法，页面更换的顺序也会各不相同。如果挑选的页面是之后很快又要被访问的页面，那么系统将很快再次出现缺页中断，这样磁盘读写的效率远远低于内存的访问速度，缺页中断的代价就非常高。  
+页面置换算法就是降低置换频率或次数。  
+
+- 随机更换算法：随机选择一个进行置换（随机性）
+- FIFO（First In First Out，先进先出）:更换最早进入内存的页面
+- 第二次机会算法：在FIFO（先进先出）的基础上多给予1次机会再做置换（选择都是从头开始，头被命中的概率大）  
+- 时钟算法：优化第二次机会算法（类似`时钟的分布`，当前指针指向的位置开始选择，无需重头开始）
+- 最优更换算法（理想的算法，实际上不存在）：就是选择没有最久最少使用到的页面置换
+- NRU(Not Recently Used,最近未使用)算法：选择一个最近一段时间未被访问的页面置换(可能下一时刻就被用到了)
+- LRU（Least Recently Used，最近最少使用）：在NRU基础上，不仅考虑最近没使用，而且考虑最近最少使用
+- 工作集算法：对访问的页面做`集合划分（访问次数）`，程序访问的（工作集），置换从头查找置换
+- 工作集时钟算法：在工作集基础上，查找置换采用时钟分布，指针指向的位置开始查找
+
+#### 逻辑分段、重叠（overlay）  
+
+逻辑分段程序按照逻辑关系分成不同的段（看做多个进程a、b、c...），当原始程序需要的内存空间超过了物理内存大小，逻辑分段执行（a做完释放内存，b继续做,b做完释放内存，c继续...）这就是重叠.
