--- a/_posts/2019-09-17-操作系统阅读笔记.md
+++ b/_posts/2019-09-17-操作系统阅读笔记.md
@@ -139,7 +139,7 @@ mutex（互斥量）、rwlock（读写锁）、cond（条件变量）、semaphor
 
 <https://www.jianshu.com/p/ca94dcc014c7>
 
-![内存管理模式演变]()
+![内存管理模式演变](https://github.com/smakry/smakry.github.io/raw/master/imags/%E5%86%85%E5%AD%98%E7%AE%A1%E7%90%86%E6%A8%A1%E5%BC%8F%E6%BC%94%E5%8F%98.png)
 
 #### 物理内存（取决于CPU寻址空间和实际内存条大小）  
 
@@ -160,14 +160,14 @@ mutex（互斥量）、rwlock（读写锁）、cond（条件变量）、semaphor
 - 分段同样是一片连续的物理内存，内存利用率低的问题没有解决
 
 1.固定分区  
-![固定分区1]()  
+![固定分区1](https://github.com/smakry/smakry.github.io/raw/master/imags/%E5%9B%BA%E5%AE%9A%E5%88%86%E5%8C%BA1.png)  
 
-![固定分区2]()
+![固定分区2](https://github.com/smakry/smakry.github.io/raw/master/imags/%E5%9B%BA%E5%AE%9A%E5%88%86%E5%8C%BA2.png)
 
 2.非固定分区  
 除系统占用的内存空间外，`其余作为一个整体`，每个程序进来计算所需内存空间分配（但存在运行时候所需内存空间的增加导致无法运行或者发生分区交换，预留太多浪费利用率低）  
 
-![非固定分区]()
+![非固定分区](https://github.com/smakry/smakry.github.io/raw/master/imags/%E9%9D%9E%E5%9B%BA%E5%AE%9A%E5%88%86%E5%8C%BA.png)
 
 3.交换分区  
 当运行时分区不足以供程序使用，讲当前程序`倒到外置存储`，然后重新分配更大空间内存，再`重新`加载程序
@@ -187,7 +187,7 @@ mutex（互斥量）、rwlock（读写锁）、cond（条件变量）、semaphor
 32位寻址4k大小的页的页表大小为2^20(页数)*4Byte（表项长度=20位页号+12位控制位）=4MB  
 - （缺点）分页系统存在的一个无法容忍，同时也是分页系统无法解决的一个缺点就是：`一个进程只能占有一个虚拟地址空间`。在此种限制下，一个程序的大小至多只能和虚拟空间一样大，其所有内容都必须从这个共同的虚拟空间内分配。
 
-##### 页面置换算法  
+#### 页面置换算法  
 
 **缺页中断**：在分页系统中，一个虚拟页面既有可能在物理内存，`也有可能保存在磁盘中`。CPU调用的虚拟页面地址对应的物理内存不存在（在磁盘中），此时将产生缺页中断（`中断处理`：将虚拟页面对应的内存地址找到并加载到内存）。  
 如果发生缺页中断，就需要从磁盘上将需要的页面调入内存。如果`内存没有多余的空间`，就需要在现有的页面中选择一个页面进行替换。使用不同的置换算法，页面更换的顺序也会各不相同。如果挑选的页面是之后很快又要被访问的页面，那么系统将很快再次出现缺页中断，这样磁盘读写的效率远远低于内存的访问速度，缺页中断的代价就非常高。  
