--- a/_posts/2019-09-17-操作系统阅读笔记.md
+++ b/_posts/2019-09-17-操作系统阅读笔记.md
@@ -138,8 +138,11 @@ mutex（互斥量）、rwlock（读写锁）、cond（条件变量）、semaphor
 ### 内存管理
 
 <https://www.jianshu.com/p/ca94dcc014c7>
-
-![内存管理模式演变](https://github.com/smakry/smakry.github.io/raw/master/imags/%E5%86%85%E5%AD%98%E7%AE%A1%E7%90%86%E6%A8%A1%E5%BC%8F%E6%BC%94%E5%8F%98.png)
+  内存管理演变过程																	|
+  纯粹分段	|一个程序就是一段，使用基址极限来管理（固定加载地址、固定分区、非固定分区、交换）	|  
+  分页		|一个程序分为多个固定大小的页面，使用页表来进行管理							|  
+  逻辑分段	|程序逻辑分为多段，用一基址极限对来管理，基址极限存放在段表里					|  
+  段页式		|程序按逻辑分为多段，每一段内又进行分页，使用段页表来管理						|  
 
 #### 物理内存（取决于CPU寻址空间和实际内存条大小）  
 
