test markdown link

--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -11,6 +11,9 @@ tags: 笔记
 ## 目录  
 
 - [结构体内存对齐问题？](#结构体内存对齐问题)
+- [字符指针和字符数组的区别](#字符指针和字符数组的区别)
+- [C++中class与struct的区别](#C++中class与struct的区别)
+- [c++虚函数和纯虚函数](#c++虚函数和纯虚函数)
 
 ### 结构体内存对齐问题  
 
@@ -53,13 +56,78 @@ void main() {
 
 代码输出结果：
 
-stu = 42578<u>00</u>, //结构体的地址即`结构体中首个元素的地址` 
-a = 42578<u>00</u>, //结构体中首个元素（偏移量为0，0看做任何成员整数倍)  
-b = 42578<u>08</u>, //起始地址是“a + 8”，`可通过“a + 8”访问`，8即偏移量（类型大小的整数倍）  
-stemp = 42578<u>16</u>,
-arry = 42578<u>24</u>,
-c = 42578<u>64</u>,
+stu = 42578<u>00</u>, //结构体的地址即`结构体中首个元素的地址`   
+a = 42578<u>00</u>, //结构体中首个元素（偏移量为0，0看做任何成员整数倍)    
+b = 42578<u>08</u>, //起始地址是“a + 8”，`可通过“a + 8”访问`，8即偏移量（类型大小的整数倍）    
+stemp = 42578<u>16</u>,  
+arry = 42578<u>24</u>,  
+c = 42578<u>64</u>,  
 p = 42578<u>68</u>, //88-28 + 4  
-struct size :72  
+struct size :72   
 
+### 字符指针和字符数组的区别
+
+- 内存分配：指针是只分配指针的空间大小，数组分配了整个数组的大小空间
+- 赋值含义：指针赋值只是赋值地址，数组赋值是拷贝数据到数组
+- 赋值方式：指针是字符串的地址，`数组是元素一一复制赋值`
+- 值的使用：指针需通过地址获得字符值，数组可以直接使用  
+
+### C++中class与struct的区别  
+
+- class默认的访问权限是private，struct是public
+- class默认的继承方式是private，struct是public
+- class可以用来定义模板参数，struct不行  
+
+### c++虚函数和纯虚函数  
+
+<https://www.runoob.com/w3cnote/cpp-virtual-function.html>  
+
+#### 虚函数  
+- 定义一个函数为虚函数`不代表不被实现`
+- 定义虚函数为了允许基类指针来调用子类的这个函数  
+- 定义为`纯虚函数才代表函数没有被实现`  
+- 虚函数类似一个规范，告诉继承于他的子类必须实现它（这个虚函数是一个接口）  
+- 类函数调用不是在编译时候确定，而是在运行时候确定（“动态联编”或“推迟联编”）。虚函数的虚在于编写时候不知道是调用基类的函数还是子类的。  
+
+```c++
+#include<iostream>
+
+class A{
+public:
+ virtual void printA(){
+     std::cout << "this is A" << std::endl;
+ }
+};
+
+class B:public A{
+public:
+ void printA(){
+     std::cout << "this is B overrid A" << std::endl;
+ }
+};
+
+int main(){
+ A *b = new B();  // 基类型用子类赋值
+ b->printA();
+
+ return 0;
+}
+/*
+输出结果:
+this is B overrid A
+*/
+```  
+
+#### 纯虚函数（儿子我告诉你有这个东西，至于他是什么样子的你说了算）  
+
+定义为纯虚函数的方式：  
+virtual [return] function() = 0;  //"= 0"告诉子类必须实现它,若不是“= 0”子类可以不实现该方法（不是纯虚函数）  
+类中存在纯虚函数的不能实例化（存在没有实现的虚函数，我只是一个说明我并不存在）  
+
+引入纯虚函数的原因：  
+- 为了方便实现多态  
+- 基本对象本身函数的实现没有实际意义（eg：动物类，本身生成对象没有意义）  
+
+
+  
 
