--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -10,12 +10,12 @@ tags: 笔记
 
 ## 目录  
 
-- [结构体内存对齐问题？](#结构体内存对齐问题)
-- [字符指针和字符数组的区别](#字符指针和字符数组的区别)
-- [C++中class与struct的区别](#C++中class与struct的区别)
-- [c++虚函数和纯虚函数](#c++虚函数和纯虚函数)
+- [结构体内存对齐问题？](#list_1)
+- [字符指针和字符数组的区别](#list_2)
+- [C++中class与struct的区别](#list_3)
+- [c++虚函数和纯虚函数](#list_4)
 
-### 结构体内存对齐问题  
+### <span id = "list_1"></span>结构体内存对齐问题  
 
 #### 为什么要内存对齐？  
 
@@ -65,38 +65,87 @@ c = 42578<u>64</u>,
 p = 42578<u>68</u>, //88-28 + 4  
 struct size :72   
 
-### 字符指针和字符数组的区别
+### <span id = "list_2"></span>字符指针和字符数组的区别
 
 - 内存分配：指针是只分配指针的空间大小，数组分配了整个数组的大小空间
 - 赋值含义：指针赋值只是赋值地址，数组赋值是拷贝数据到数组
 - 赋值方式：指针是字符串的地址，`数组是元素一一复制赋值`
 - 值的使用：指针需通过地址获得字符值，数组可以直接使用  
 
-### C++中class与struct的区别  
+### <span id = "list_3"></span>C++中class与struct的区别  
 
 - class默认的访问权限是private，struct是public
 - class默认的继承方式是private，struct是public
 - class可以用来定义模板参数，struct不行  
 
-### c++虚函数和纯虚函数  
+### <span id = "list_4"></span>c++虚函数和纯虚函数  
 
 <https://www.runoob.com/w3cnote/cpp-virtual-function.html>  
 
 #### 虚函数  
+
 - 定义一个函数为虚函数`不代表不被实现`
 - 定义虚函数为了允许基类指针来调用子类的这个函数  
 - 定义为`纯虚函数才代表函数没有被实现`  
 - 虚函数类似一个规范，告诉继承于他的子类必须实现它（这个虚函数是一个接口）  
-- 类函数调用不是在编译时候确定，而是在运行时候确定（“动态联编”或“推迟联编”）。虚函数的虚在于编写时候不知道是调用基类的函数还是子类的。  
+- 类函数调用不是在编译时候确定，而是在`运行时候确定`（“动态联编”或“推迟联编”）。虚函数的虚在于编写时候不知道是调用基类的函数还是子类的。  
+- 虚函数是c++用于实现多态（Polymorphism）的机制，核心理念就是`通过基类访问派生类定义的函数`  
+- 有`动态分配堆上内存`的时候，析构函数`必须是虚函数`，但没有必要是纯虚函数。（删除一个`基类指针`的时候，c++不管这个指针指向一个基类对象还是一个派生类对象，调用的都是`基类的析构函数`,这种情况依赖派生类析构的资源不会被析构，资源泄露 <https://blog.csdn.net/qq826364410/article/details/88914802>）
 
 ```c++
 #include<iostream>
 
 class A{
 public:
- virtual void printA(){
-     std::cout << "this is A" << std::endl;
- }
+    A(){ std::cout << "this is ctor of A" << std::endl; }
+    virtual ~A(){ std::cout << "this is del of A" << std::endl; } //若不声明为虚函数，删除基类指针只会调用“~A()”,不会调用基类的析构
+    virtual void printA() = 0;
+};
+
+class B:public A{
+public:
+    B(){ std::cout << "this is ctor of B" << std::endl; }
+    ~B(){ std::cout << "this is del of B" << std::endl; }
+    void printA(){
+        std::cout << "this is B overrid A" << std::endl;
+    }
+};
+
+int main(){
+    A *b = new B(); //基类用子类赋值
+    b->printA();
+    delete b;
+
+    return 0;
+}
+
+/*
+输出结果:
+this is ctor of A
+this is ctor of B
+this is B overrid A
+this is del of B
+this is del of A
+*/
+```  
+
+#### 纯虚函数（儿子我告诉你有这个东西，至于他是什么样子的你说了算）  
+
+定义为纯虚函数的方式：  
+virtual [return] function(Params) = 0;  //“= 0”告诉子类必须实现它,若不是“= 0”子类可以不实现该方法（不是纯虚函数）  
+类中存在`纯虚函数的不能实例化`（存在没有实现的虚函数，我只是一个说明我并不存在）  
+
+引入纯虚函数的原因：  
+- 效率：为了方便实现多态  
+- 安全：基本对象本身函数的实现没有实际意义（eg：动物类，本身生成对象没有意义）  
+
+```cpp  
+
+#include<iostream>
+
+class A{
+public:
+ virtual void printA() = 0;  //纯虚函数
 };
 
 class B:public A{
@@ -107,27 +156,18 @@ public:
 };
 
 int main(){
- A *b = new B();  // 基类型用子类赋值
+ A *b = new B();  //抽象类不能定义实例，但**可以声明指向实现该抽象类的具体类的指针或引用**
  b->printA();
 
  return 0;
 }
-/*
-输出结果:
-this is B overrid A
-*/
-```  
 
-#### 纯虚函数（儿子我告诉你有这个东西，至于他是什么样子的你说了算）  
+```
 
-定义为纯虚函数的方式：  
-virtual [return] function() = 0;  //"= 0"告诉子类必须实现它,若不是“= 0”子类可以不实现该方法（不是纯虚函数）  
-类中存在纯虚函数的不能实例化（存在没有实现的虚函数，我只是一个说明我并不存在）  
+#### 抽象类  
 
-引入纯虚函数的原因：  
-- 为了方便实现多态  
-- 基本对象本身函数的实现没有实际意义（eg：动物类，本身生成对象没有意义）  
-
+- 带有纯虚函数的类为抽象类
+- 类继承了于抽象类，但未实现纯虚函数，那么继承类还是一个抽象类  
 
 
   
