--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -14,6 +14,11 @@ tags: 笔记
 - [字符指针和字符数组的区别](#list_2)
 - [C++中class与struct的区别](#list_3)
 - [c++虚函数和纯虚函数](#list_4)
+- [C++的动态绑定的概念](#list_7)
+- [inline可以用虚函数实现吗？](#list_5)
+- [函数调用入栈顺序](#list_6)
+
+--- 
 
 ### <span id = "list_1"></span>结构体内存对齐问题  
 
@@ -169,6 +174,57 @@ int main(){
 - 带有纯虚函数的类为抽象类
 - 类继承了于抽象类，但未实现纯虚函数，那么继承类还是一个抽象类  
 
+### <span id = "list_7"></span>C++的动态绑定的概念  
 
+- 静态绑定：`编译时`绑定，通过`对象`调用
+- 动态绑定：`运行时`绑定，通过`地址`实现  
+只有采用“指针->函数()”或“引用变量.函数()”方式调用C++类中的虚函数才会执行动态绑定，因此`非虚函数不存在动态绑定`。
+
+### <span id = "list_5"></span>inline可以用虚函数实现吗  
   
+inline函数是在编译时候动态的展开代码，而虚函数是在运行时候动态调用，所以不能。
 
+#### inline函数
+
+- 为何要有inline？  
+小函数（代码`片段很小`的，复制大的不适合做内联函数）但有频繁调用，栈内存开销大（函数在代码区，函数内的变量在栈中）。  
+- inline是在`编译时候处理`的，同时也只是给编译器一个`建议`，编译器最后可能不内联  
+- inline的类型：  
+
+```cpp
+#include<iostream>
+
+class A{
+public:
+    //类里面定义的函数，默认是inline
+    void funcA(int x,int y){
+        std::cout << "funcA" << std::endl;                 
+    }   
+}   
+
+///////////////////////////////////////////////////  
+//head file
+class B{
+public:
+    void funcB(int x,int y);
+}
+
+//define file(相比在类中直接定义这种方式的内联比较好)
+inline void funcB(int x,int y){}
+
+///////////////////////////////////////////////////  
+//这种方式内联在声明中不是内联
+inline void funcC(int x,int y);
+void funcC(int x,int y){} 
+
+//这种方式内联在定义中是内联
+void funcC(int x,int y);
+inline void funcC(int x,int y){} 
+
+```
+
+### <span id = "list_5"></span>函数调用入栈顺序  
+
+函数调用过程，第一个进栈的是主调函数中调用函数的`下一条执行语句的地址`；接下来是函数的各个参数，对于绝大部分的C/C++编译器来说`参数是从右到左顺序入栈`的；接下里就是函数的局部变量入栈（`不包括静态局部变量`）。当函数调用结束的时候局部变量先退栈接着是函数参数，最后栈顶指针指向主调函数的下一条执行的命令继续执行。  
+
+![函数调用入栈顺序]()
