--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -223,8 +223,8 @@ inline void funcC(int x,int y){}
 
 ```
 
-### <span id = "list_5"></span>函数调用入栈顺序  
+### <span id = "list_6"></span>函数调用入栈顺序  
 
 函数调用过程，第一个进栈的是主调函数中调用函数的`下一条执行语句的地址`；接下来是函数的各个参数，对于绝大部分的C/C++编译器来说`参数是从右到左顺序入栈`的；接下里就是函数的局部变量入栈（`不包括静态局部变量`）。当函数调用结束的时候局部变量先退栈接着是函数参数，最后栈顶指针指向主调函数的下一条执行的命令继续执行。  
 
-![函数调用入栈顺序]()
+![函数调用入栈顺序](https://github.com/smakry/smakry.github.io/raw/master/imags/%E5%87%BD%E6%95%B0%E8%B0%83%E7%94%A8%E5%85%A5%E6%A0%88%E9%A1%BA%E5%BA%8F.png)
