--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -13,10 +13,14 @@ tags: 笔记
 - [结构体内存对齐问题？](#list_1)
 - [字符指针和字符数组的区别](#list_2)
 - [C++中class与struct的区别](#list_3)
-- [c++虚函数和纯虚函数](#list_4)
+- [C++虚函数和纯虚函数](#list_4)
 - [C++的动态绑定的概念](#list_7)
 - [inline可以用虚函数实现吗？](#list_5)
 - [函数调用入栈顺序](#list_6)
+- [友元类友元函数](#list_8)
+- [C++多态的概念和实现机制](#list_9)
+- [堆栈的区别](#list_10)
+- [sizeof和strlen区别](#list_11)
 
 --- 
 
@@ -227,4 +231,110 @@ inline void funcC(int x,int y){}
 
 函数调用过程，第一个进栈的是主调函数中调用函数的`下一条执行语句的地址`；接下来是函数的各个参数，对于绝大部分的C/C++编译器来说`参数是从右到左顺序入栈`的；接下里就是函数的局部变量入栈（`不包括静态局部变量`）。当函数调用结束的时候局部变量先退栈接着是函数参数，最后栈顶指针指向主调函数的下一条执行的命令继续执行。  
 
-![函数调用入栈顺序](https://github.com/smakry/smakry.github.io/raw/master/imags/%E5%87%BD%E6%95%B0%E8%B0%83%E7%94%A8%E5%85%A5%E6%A0%88%E9%A1%BA%E5%BA%8F.png)
+![函数调用入栈顺序](https://github.com/smakry/smakry.github.io/raw/master/imags/%E5%87%BD%E6%95%B0%E8%B0%83%E7%94%A8%E5%85%A5%E6%A0%88%E9%A1%BA%E5%BA%8F.png)  
+
+### <span id = "list_8"></span>友元函数友元类  
+
+类的友元函数是`定义在类外部`，但`有权访问`类的所有私有（private）成员和保护（protected）成员。尽管友元函数的原型有在类的定义中出现过，但是友元函数`并不是成员函数`。友元是函数即友元函数，友元是类即友元类。  
+友元函数没有this指针：    
+- 要访问非static成员时，需要对象做参数  
+- 访问static成员或者全局变量是不需要（同其它的访问，参数如果是全局的也不需要对象做参数）  
+- 友元函数直接调用，不需要通过对象或者指针  
+
+```cpp
+
+class A{
+public:
+    A(int a,int b){
+        this->a = a;
+        this->b = b;
+    }
+    void print();
+//  friend void countData(A a){}  //非类成员函数不能将定义放到类内
+    friend void countData(A a);
+    friend class B;
+private:
+    int a;
+    int b;
+};
+
+class B{
+public:
+	//类B是A的友元类，可以直接访问A的private成员
+    void print(A a){
+        std::cout << "this is class B:" << a.a + a.b << std::endl;
+    }
+};
+
+void A::print(){
+
+}
+
+void countData(A a){
+    std::cout << a.a + a.b << std::endl; //友元没有this指针需通过对象或指针访问
+}
+
+int main(){
+    A *a = new A(10,11);
+    countData(*a);  // 友元不是类方法可直接调用
+
+    B b;
+    b.print(*a);
+
+    return 0;
+}
+```  
+
+### <span id = "list_9"></span>C++多态的概念和实现机制  
+
+- 多态指的是`基类的指针有`多种形态，简单概括为“一个接口，多种方法”，这是面向对象的核心概念  
+- 多态利用虚函数来实现，依靠`虚函数表`在运行的时候动态绑定  
+- C++中有两种多态：  
+    - 动态多态：利用继承和虚函数来实现  
+    - 静态多态：利用函数重载和运算符重载实现（<https://www.runoob.com/cplusplus/class-member-access-operator-overloading.html>）  
+
+### <span id = "list_10"></span>堆栈的区别  
+
+- 分配方式和回收方式的区别：  
+    - 栈：由系统自动分配，并且在声明周期结束后系统自动回收
+    - 堆：手动申请（例如new和malloc），释放需要手动释放（例如delete和free），如未释放会导致内存泄露  
+- 申请效率：  
+    - 栈：由系统分配，速度较快，效率高
+    - 堆：手动申请一般比较慢，且容易产生内存碎片  
+- 存储内容：
+    - 栈：主要用于存储运行时候的局部变量、参数、地址等
+    - 堆：主要储存new出来的数据类型等  
+
+### <span id = "list_11"></span>sizeof和strlen的区别
+
+- sizeof是操作符，strlen是库函数  
+- sizeof的参数可以是数据类型也可以是变量；而strlen只能是以'\0'结尾的字符串作为参数（以参数的值为首地址，`遇到第一个'\0'的长度`）  
+- 编译器在`编译的时候`就计算出了sizeof的结果，sizeof计算的是数据类型占内存的大小；strlen是在`运行的时候`才能算出，计算的是字符串的长度  
+- 数据传递给sizeof不会退化；传递给strlen会退化为指针（`strlen是函数，函数形参里面的数据会退化为指针`）
+
+```cpp  
+
+#include<iostream>
+#include<string.h>
+
+int main(){
+    char a = 'a';
+    char c = 'd';
+    char b = '\0'; //用来strlen判定结束
+    char arry[10] = "nihaoma";
+    
+    std::cout << "sizeof:" << sizeof(a) << "\t" << sizeof(arry) << std::endl;
+    std::cout << "strlen:" << strlen(&a) << "\t" << strlen(arry) << std::endl;
+
+    int arry2[11];
+    std::cout << "arry2:" << sizeof(arry2) << std::endl;
+
+    return 0;
+}
+
+运行结果：
+sizeof:1	10
+strlen:2	7      //strlen(&a)不是1
+arry2:44
+
+```
