--- a/_posts/2019-09-18-C内存管理.md
+++ b/_posts/2019-09-18-C内存管理.md
@@ -13,10 +13,10 @@ tags: 内存管理 阅读笔记
 ### 基本的一些概念  
 
 1. 变量  
-- 全局变量（外部变量）：代码块之外的  
-- 局部变量（内部自动变量）：代码块之内的，可用auto修饰  
-- 静态变量：程序执行过程地址`一直不变`的,关键字static修饰的
-- extern修饰变量，具体情况分析，可声明可定义，extern修饰函数一定是定义    
+    - 全局变量（外部变量）：代码块之外的  
+    - 局部变量（内部自动变量）：代码块之内的，可用auto修饰  
+    - 静态变量：程序执行过程地址`一直不变`的,关键字static修饰的
+    - extern修饰变量，具体情况分析，可声明可定义，extern修饰函数一定是定义    
 2. 作用域：能产生作用的范围  
 3. 函数：...
 4. `C语言中函数默认是全局的`，使用static修饰的函数只能被定义该函数的文件访问。
@@ -27,7 +27,7 @@ tags: 内存管理 阅读笔记
 
 ![内存四区](https://github.com/smakry/smakry.github.io/raw/master/imags/%E5%86%85%E5%AD%98%E5%9B%9B%E5%8C%BA.png)
 
-1. 代码区（`程序运行期间不会变化`）  
+1. 代码区（`程序运行期间不会变化`，存放二进制的代码）  
 操作系统加载程序到内存，所有的可执行代码（程序代码指令、常量字符串等）都`加载到代码区`，这块内存在程序运行期间是不变的。函数也是代码的一部分。  
 “int a = 0;”`加载到代码区的只有“a = 0;”`，“int a;”在程序编译的时候已完成。  
 2. 静态区  
