--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -21,6 +21,9 @@ tags: 笔记
 - [C++多态的概念和实现机制](#list_9)
 - [堆栈的区别](#list_10)
 - [sizeof和strlen区别](#list_11)
+- [C的malloc和C++的new的区别](#list_12) 
+- [strcpy和memcpy区别](#list_13)
+- [memcpy和memmove区别](#list_14)
 
 --- 
 
@@ -307,7 +310,9 @@ int main(){
 
 ### <span id = "list_11"></span>sizeof和strlen的区别
 
-- sizeof是操作符，strlen是库函数  
+size_t strlen ( const char * str );  
+
+- sizeof是`操作符`，strlen是库函数  
 - sizeof的参数可以是数据类型也可以是变量；而strlen只能是以'\0'结尾的字符串作为参数（以参数的值为首地址，`遇到第一个'\0'的长度`）  
 - 编译器在`编译的时候`就计算出了sizeof的结果，sizeof计算的是数据类型占内存的大小；strlen是在`运行的时候`才能算出，计算的是字符串的长度  
 - 数据传递给sizeof不会退化；传递给strlen会退化为指针（`strlen是函数，函数形参里面的数据会退化为指针`）
@@ -337,4 +342,29 @@ sizeof:1	10
 strlen:2	7      //strlen(&a)不是1
 arry2:44
 
-```
+```  
+
+### <span id = "list_12"></span>C的malloc和C++的new的区别  
+
+malloc/free和new/delete都可以用来动态分配内存  
+- malloc/free是C语言用来动态分配内存和释放的`函数`，malloc向堆申请一块内存，成功`返回void指针`（void*表示不确定类型的指针，可以强制转化），这块内存不使用时通过free释放，并把指向这块内存的指针设为NULL  
+- new/delete是C++用来为某一个数据类型对象分配内存的`操作符`，可以被重载。new从堆申请内存成功后返回`指向具体数据类型的指针`。new在为类对象申请内存空间会去调用类的构造函数，在delete释放会调用析构函数  
+
+### <span id = "list_13"></span>strcpy和memcpy区别  
+
+char * strcpy ( char * destination, const char * source ); //返回值是指向destination的指针  
+void * memcpy ( void * destination, const void * source, size_t num ); //Copy block of memory（`复制内存块`），void*表示不确定类型的指针  
+
+char * strncpy ( char * destination, const char * source, size_t num ); 
+void * memset ( void * ptr, int value, size_t num ); //Fill block of memory（内存块前num用value填充，value转化为unsigned char）  
+
+- strcpy只能用于复制字符串，memcpy可以用来复制任意的内容  
+- strcpy复制不需要指定长度但遇到'\0'时马上结束，memcpy需要指定长度  
+
+### <span id = "list_14"></span>memcpy和memmove区别  
+
+void * memcpy ( void * destination, const void * source, size_t num ); //Copy block of memory（`复制内存块`），void*表示不确定类型的指针  
+void * memmove ( void * destination, const void * source, size_t num );  
+
+memcpy和memmove的作用都是从source区域复制一定大小的内容到destination。唯一的区别当内存发生局部重叠（内存重叠：拷贝的目的地址在源地址范围内，目的地址和源地址有重叠部分），`memmove保证复制是正确的`，memcpy不保证复制是正确的，但是`memcpy复制速度快`（无需考虑重叠的开销）。  
+
