--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -24,6 +24,7 @@ tags: 笔记
 - [C的malloc和C++的new的区别](#list_12) 
 - [strcpy和memcpy区别](#list_13)
 - [memcpy和memmove区别](#list_14)
+- [#define与typedef](#list_15)
 
 --- 
 
@@ -368,3 +369,28 @@ void * memmove ( void * destination, const void * source, size_t num );
 
 memcpy和memmove的作用都是从source区域复制一定大小的内容到destination。唯一的区别当内存发生局部重叠（内存重叠：拷贝的目的地址在源地址范围内，目的地址和源地址有重叠部分），`memmove保证复制是正确的`，memcpy不保证复制是正确的，但是`memcpy复制速度快`（无需考虑重叠的开销）。  
 
+### <span id = "list_15"></span>#define与typedef  
+
+- #define:`文本替换`，无脑替换，`预处理器`完成
+- typedef：
+    - 任何声明变量的语句前面加上typedef后，原来是变量的都成了类型，例如以下两种（效果一样）：    
+typedef int my_int;  
+int typedef my_int;  
+	- typedef定义的新类型使用时候`省略括号`，例如以下两种（效果一致）:  
+typedef int my_int;
+my_int a = 10;
+my_int(a) = 10;   
+
+    - typedef快速解析（拿掉typedef剩下的原来表示的含义是啥，然后再把原来的变量名拿来作为新类型），例如：  
+<https://blog.csdn.net/hai008007/article/details/80651886>  
+
+typedef int a;  
+typedef int *p;    
+typedef int a[];//拿掉后声明了数组a，a拿来作为新类型  
+typedef int f();//拿掉后声明了函数f，f拿来作为新类型（无参数返回int的函数类型f）
+typedef int g(int);//拿掉后声明了带int参数的函数g，g拿来作为新类型（带一个int参数返回值int的函数类型g） 
+typedef void(*func)(void);//拿掉后声明了一个无返回值无参的函数指针func  
+
+
+虚函数如何实现多态机制  
+https://blog.csdn.net/qican_7/article/details/100603461
